--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     }],
     "autoload": {
         "psr-4": { "Maalls\\": "src" }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
